# midi-compiler

./: .gitignore  Cargo.toml  readme.md
src/: cli.rs  lib.rs
