[package]
name = "midi-compiler"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.80"
wee_alloc = "0.4.5"
midly = {version = "0.5.2", default-features = false, features = ["alloc"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = {version = "3.1.18", features = ["derive"]}
midly = "0.5.2"

[[bin]]
name = "midi-compiler"
path = "src/cli.rs"

[lib]
name = "midi_compiler_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 'z'
debug = false
strip = "debuginfo"
lto = "fat"
